tests/errors/invalid-interface-output.expect
---CODE---
1
---STDERR---
error: bundle's availability is greater than the delay of the event
  ┌─ tests/errors/invalid-interface-output.fil:6:11
  │
2 │   comp Main<@G: 1, @L: 1>(
  │                 - event's delay
  ·
6 │      out: [@G+2, @G+4] 1,
  │           ^^^^^^^^^^^^ available for 2 cycles

Compilation failed with 1 errors.
Run with --show-models to generate assignments for failing constraints.
